; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6656/extr_michael.c_s_vAppendByte.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/staging/vt6656/extr_michael.c_s_vAppendByte.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@nBytesInM = common dso_local global i32 0, align 4
@M = common dso_local global i32 0, align 4
@L = common dso_local global i32 0, align 4
@R = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32)* @s_vAppendByte to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @s_vAppendByte(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  store i32 %0, i32* %3, align 4
  %4 = load i32, i32* %3, align 4
  %5 = load i32, i32* @nBytesInM, align 4
  %6 = mul nsw i32 8, %5
  %7 = shl i32 %4, %6
  %8 = load i32, i32* @M, align 4
  %9 = or i32 %8, %7
  store i32 %9, i32* @M, align 4
  %10 = load i32, i32* @nBytesInM, align 4
  %11 = add nsw i32 %10, 1
  store i32 %11, i32* @nBytesInM, align 4
  %12 = load i32, i32* @nBytesInM, align 4
  %13 = icmp sge i32 %12, 4
  br i1 %13, label %14, label %51

14:                                               ; preds = %1
  %15 = load i32, i32* @M, align 4
  %16 = load i32, i32* @L, align 4
  %17 = xor i32 %16, %15
  store i32 %17, i32* @L, align 4
  %18 = load i32, i32* @L, align 4
  %19 = call i32 @ROL32(i32 %18, i32 17)
  %20 = load i32, i32* @R, align 4
  %21 = xor i32 %20, %19
  store i32 %21, i32* @R, align 4
  %22 = load i32, i32* @R, align 4
  %23 = load i32, i32* @L, align 4
  %24 = add nsw i32 %23, %22
  store i32 %24, i32* @L, align 4
  %25 = load i32, i32* @L, align 4
  %26 = and i32 %25, -16711936
  %27 = lshr i32 %26, 8
  %28 = load i32, i32* @L, align 4
  %29 = and i32 %28, 16711935
  %30 = shl i32 %29, 8
  %31 = or i32 %27, %30
  %32 = load i32, i32* @R, align 4
  %33 = xor i32 %32, %31
  store i32 %33, i32* @R, align 4
  %34 = load i32, i32* @R, align 4
  %35 = load i32, i32* @L, align 4
  %36 = add nsw i32 %35, %34
  store i32 %36, i32* @L, align 4
  %37 = load i32, i32* @L, align 4
  %38 = call i32 @ROL32(i32 %37, i32 3)
  %39 = load i32, i32* @R, align 4
  %40 = xor i32 %39, %38
  store i32 %40, i32* @R, align 4
  %41 = load i32, i32* @R, align 4
  %42 = load i32, i32* @L, align 4
  %43 = add nsw i32 %42, %41
  store i32 %43, i32* @L, align 4
  %44 = load i32, i32* @L, align 4
  %45 = call i32 @ROR32(i32 %44, i32 2)
  %46 = load i32, i32* @R, align 4
  %47 = xor i32 %46, %45
  store i32 %47, i32* @R, align 4
  %48 = load i32, i32* @R, align 4
  %49 = load i32, i32* @L, align 4
  %50 = add nsw i32 %49, %48
  store i32 %50, i32* @L, align 4
  store i32 0, i32* @M, align 4
  store i32 0, i32* @nBytesInM, align 4
  br label %51

51:                                               ; preds = %14, %1
  %52 = load i32, i32* %2, align 4
  ret i32 %52
}

declare dso_local i32 @ROL32(i32, i32) #1

declare dso_local i32 @ROR32(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
